Added telegraphic pixels

--- a/test_bad_pixels.ipynb
+++ b/test_bad_pixels.ipynb
@@ -753,138 +753,125 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 49,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def warm_pixels(camera, exposure_time = 10, mean_warm = 45.6+5, std_warm = 9.3, skewness_warm = 6, size=10000):\n",
-    "    base = np.ones((camera.height, camera.width))\n",
-    "    base += np.random.poisson(base * camera.dark_current * exposure_time)\n",
-    "    \n",
-    "    # Generate data from a skewed normal distribution\n",
-    "    data = skewnorm.rvs(a=skewness_warm, size=size)\n",
-    "    \n",
-    "    # Scale to match the target standard deviation\n",
-    "    data_std = np.std(data)\n",
-    "    scaled_data = data / data_std * std_warm  # Normalize to std=1 and scale to target std\n",
-    "    \n",
-    "    # Adjust to match the target mean after skewing\n",
-    "    scaled_data = scaled_data + (mean_warm - np.mean(scaled_data))\n",
-    "    scaled_data = scaled_data.reshape(camera.height, camera.width)\n",
-    "    warm = base + scaled_data\n",
-    "    \n",
-    "    return warm, scaled_data"
+    "## Telegraphic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameters\n",
-    "ra  = 346.6263750   # in degrees\n",
-    "dec = -5.04346111   # in degrees\n",
-    "exposure_time = 10  # in seconds\n",
-    "\n",
-    "num_pixels_shift = 4\n",
-    "num_light_images = 10\n",
-    "num_dark_images = 5\n",
-    "camera_width  = 1024\n",
-    "camera_height = 1024\n",
-    "camera_dark_current = 0.2\n",
-    "camera    = cabaret.Camera(width=camera_width, height=camera_height, dark_current=camera_dark_current)\n",
-    "telescope = cabaret.Telescope()\n",
-    "\n",
-    "dir_base_images_light = 'images_generated_light_guiding'\n",
-    "dir_base_images_dark  = 'images_generated_dark_guiding'\n",
-    "warm, scaled_data = warm_pixels(camera, exposure_time, size=camera.width*camera.height)"
+    "from prose import FitsManager, FITSImage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsing FITS: 100%|██████████| 55/55 [00:00<00:00, 1628.04it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[38;5;12mINFO\u001b[0m telescope  not found - using default\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING: FITSFixedWarning: 'datfix' made the change 'Set MJD-OBS to 60310.000000 from DATE-OBS'. [astropy.wcs.wcs]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fm = FitsManager('images_generated_all_guiding/', depth=1)\n",
+    "image = FITSImage(fm.all_images[0]).data  # 1024x1024 image filled with ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Querying Gaia for sources...\n",
-      "Found 55 sources (user set limit of 2000).\n"
+      "range(0, 50)\n"
      ]
     }
    ],
    "source": [
-    "light = cabaret.generate_image(10, 10, exposure_time, camera=camera)\n"
+    "len(fm.all_images)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "interval = 10\n",
+    "for i in range(len(fm.all_images)):\n",
+    "    if i%interval == 0 and i != 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "44"
+       "1048576"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "(warm[0,0]).astype(np.int16)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.uint16"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(light[0,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[564.1, 535.1, 579.1, ..., 523.1, 553.1, 557.1],\n",
-       "       [555.1, 536.1, 544.1, ..., 529.1, 538.1, 543.1],\n",
-       "       [534.1, 546.1, 530.1, ..., 540.1, 547.1, 536.1],\n",
-       "       ...,\n",
-       "       [535.1, 558.1, 550.1, ..., 557.1, 550.1, 555.1],\n",
-       "       [550.1, 555.1, 533.1, ..., 503.1, 559.1, 537.1],\n",
-       "       [526.1, 559.1, 528.1, ..., 547.1, 544.1, 532.1]])"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "light + np.full((camera.height, camera.width), 100.1)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
